--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Javascript Book</title>
-	<!-- BOOTSTRAP 4 -->
-	<link type="text/css" href="styles/style.css">
-	<!-- ANIMATE CSS -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-</head>
-<body>
-	<nav class="navbar navbar-dark bg-dark">
-		<div class="container">
-			<a href="/" class="navbar-brand">Book App</a>
-		</div>
-	</nav>
+<html lang="en">
 
-	<div class="container p-4">
-		<div class="row">
-			<div class="col-md-4 ">
-				<form id="book-form" class="card card-body">
-					<div class="form-group">
-						<input class="form-control" id="title" type="text" placeholder="Book Title">
-					</div>
-					<div class="form-group">
-						<input class="form-control" id="author" type="text" placeholder="Author">
-					</div>
-					<div class="form-group">
-						<input class="form-control" id="isbn" type="text" placeholder="ISBN">
-					</div>
-					<div class="imput-group mb-3">
-						<div class="custom-file">
-							<input class="custom-file-input" type="file" id="image" >
-							<label class="custom-file-label" for="file">Choose Image</label>
-						</div>
-					</div>
-					
-					<button class="btn btn-primary" type="submit">Save Book</button>
-				</form>
-				</div>
-				<div class="co-md-8" id="books-card">
-					
-					</div>
-			</div>
-		</div>
-	</body>
-	</html>
+<head>
+  <meta charset="UTF-8">
+  <title>Computer Products</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
+</head>
+
+<body>
+
+  <!-- NAVIGATION -->
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/">Books App</a>
+    </div>
+  </nav>
+
+  <div class="container p-4" id="app">
+    <div class="row">
+      <div class="col-md-4">
+
+        <form id="book-form" class="card card-body">
+          <div class="form-group">
+            <input type="text" id="title" class="form-control" placeholder="Book Title" autofocus>
+          </div>
+          <div class="form-group">
+            <input type="text" id="author" class="form-control" placeholder="Author">
+          </div>
+          <div class="form-group">
+            <input type="text" id="isbn" class="form-control" placeholder="ISBN">
+          </div>
+          <div class="input-group mb-3">
+              <div class="custom-file">
+                <input type="file" class="custom-file-input" id="image" required>
+                <label class="custom-file-label" for="image" aria-describedby="inputGroupFileAddon02">Choose Image</label>
+              </div>
+            </div>
+          <button type="Submit" class="btn btn-primary">
+            Save Book
+          </button>
+        </form>
+      </div>
+
+      <div class="col-md-8" id="books-cards">
+      </div>
+
+    </div>
+
+  </div>
+
+</body>
+
+</html>
