--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
 					<div class="form-group">
 						<input class="form-control" id="isbn" type="text" placeholder="ISBN">
 					</div>
-					<div class="imput-group mb-3">
+					<div class="input-group mb-3">
 						<div class="custom-file">
 							<input class="custom-file-input" type="file" id="image" >
 							<label class="custom-file-label" for="file">Choose Image</label>
